@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.5.12) unstable; urgency=low
 
   * response: pass the "Location" response handler
+  * added support for multiple listener ports
 
  --
 
